--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -46,7 +46,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="build/windows/BIRD SOUP.exe"
+export_path="build/BIRD SOUP/BIRD SOUP.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
