--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -30,11 +30,11 @@ html/experimental_virtual_keyboard=false
 progressive_web_app/enabled=false
 progressive_web_app/offline_page=""
 progressive_web_app/display=1
-progressive_web_app/orientation=0
+progressive_web_app/orientation=1
 progressive_web_app/icon_144x144=""
 progressive_web_app/icon_180x180=""
 progressive_web_app/icon_512x512=""
-progressive_web_app/background_color=Color(0, 0, 0, 1)
+progressive_web_app/background_color=Color(0.0745098, 0.00784314, 0.0313726, 1)
 
 [preset.1]
 
